--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -4,7 +4,6 @@ body{
 	}
 	&.modal-open{
 		padding-right: 0 !important;
-		// padding-right: 5px !important;
 		position: fixed;
 		width: 100%;
 	}
@@ -74,8 +73,6 @@ body{
 
 	&.is-active{display: block;}
 }
-
-// .windows{display: none;}
 
 .clearfix {@include clr();}
 
@@ -158,7 +155,7 @@ body{
 	@extend %flexColumn;
 
 	&__desc {
-		color: $gray;
+		color: $gray--darken;
 		font-size: 9px;
 		line-height: 1.4;
 		text-transform: uppercase;
