--- a/src/sass/components/_tab.scss
+++ b/src/sass/components/_tab.scss
@@ -38,11 +38,12 @@
 		width: 40px;
 		height: 40px;
 		&_wrap{
-			width: 55px;
-			height: 55px;
+			width: 60px;
+			height: 60px;
 			margin-bottom: 10px;
 			border: 1px solid $gray--dark;
 			border-radius: 50%;
+			background-color: #fff;
 			@extend %flexCenter;
 			justify-content: center;
 		}
