--- a/src/sass/pages/_catalog.scss
+++ b/src/sass/pages/_catalog.scss
@@ -223,7 +223,7 @@
 	&__content {
 		max-height: 235px;
 		border-top: 1px solid $color-border;
-		overflow: hidden;
+		@include bz-scroll;
 		@include respond-to(sm) {
 			padding: 10px;
 			border-top: 0;
