--- a/src/templates/partials/_catalog-filter.html
+++ b/src/templates/partials/_catalog-filter.html
@@ -9,7 +9,7 @@
 
 			<div class="catalog-filter__item js-catalog-filter-item accordeon__item is-open">
 				<div class="catalog-filter__subtitle accordeon__title">Цвет</div>
-				<div class="catalog-filter__content accordeon__content js-scroll">
+				<div class="catalog-filter__content accordeon__content">
 					<div class="catalog-filter__subitem">
 						{{ item.checkbox('белый', 'checkbox--transform js-checkbox') }}
 						<span class="catalog-filter__color" data-filter-color="#fff"></span>
@@ -47,7 +47,7 @@
 
 			<div class="catalog-filter__item js-catalog-filter-item accordeon__item">
 				<div class="catalog-filter__subtitle accordeon__title">Плотность ткани</div>
-				<div class="catalog-filter__content accordeon__content js-scroll">
+				<div class="catalog-filter__content accordeon__content">
 					<div class="catalog-filter__subitem">
 						{{ item.checkbox('110', 'checkbox--transform') }}
 					</div>
@@ -68,7 +68,7 @@
 
 			<div class="catalog-filter__item js-catalog-filter-item accordeon__item">
 				<div class="catalog-filter__subtitle accordeon__title">Цена</div>
-				<div class="catalog-filter__content accordeon__content js-scroll">
+				<div class="catalog-filter__content accordeon__content">
 					<div class="catalog-filter__item_price js-catalog-filter-item-price">
 						<div class="catalog-filter__range range">
 							<div class="range__slider" id="js-catalog-filter-slider" data-start="350" data-end="680"></div>
@@ -89,7 +89,7 @@
 
 			<div class="catalog-filter__item js-catalog-filter-item accordeon__item">
 				<div class="catalog-filter__subtitle accordeon__title">Производитель</div>
-				<div class="catalog-filter__content accordeon__content js-scroll">
+				<div class="catalog-filter__content accordeon__content">
 					<div class="catalog-filter__subitem">
 						{{ item.checkbox('Турция', 'checkbox--transform') }}
 					</div>
